--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,9 @@
         "laravel/tinker": "^2.9",
         "laravel/ui": "^4.5",
         "realrashid/sweet-alert": "^7.2",
-        "spatie/laravel-permission": "^6.9"
+        "spatie/laravel-permission": "^6.9",
+        "yajra/laravel-datatables": "11.0",
+        "yajra/laravel-datatables-oracle": "11.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
