--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
         "@popperjs/core": "^2.10.2",
         "axios": "^1.7.4",
         "bootstrap": "~5.1.3",
+        "laravel-datatables-vite": "^0.5.2",
         "laravel-vite-plugin": "^1.0",
         "resolve-url-loader": "^4.0.0",
         "sass-embedded": "^1.78.0",
         "vite": "^5.0"
+    },
+    "dependencies": {
+        "node-sass": "^8.0.0"
     }
 }
