--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/ui": "^4.5",
         "realrashid/sweet-alert": "^7.2",
         "spatie/laravel-permission": "^6.9",
+        "twilio/sdk": "^8.3",
         "yajra/laravel-datatables": "11.0",
         "yajra/laravel-datatables-oracle": "11.0"
     },
